# fenrir-v2

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  fenrir_pumpfun_bot.py  pyproject.toml  requirements.txt  run-api.ps1  run.ps1  setup.sh
.github/workflows/: ci.yml  devnet-integration.yml
api/: __init__.py  server.py
config/: .env.example  default.json  devnet.json
dashboard/: index.html  package-lock.json  package.json
dashboard/src/: App.css  App.tsx  index.css  types.ts
docs/: README.md  bitquery-integration-spec.md
fenrir/: __init__.py  __main__.py  bot.py  config.py  exceptions.py  logger.py
fenrir/adapters/: __init__.py  jupiter_client.py
fenrir/ai/: __init__.py  agent_panel.py  brain.py  context_builder.py  decision_engine.py  ensemble_scorer.py  hedge_detector.py  local_backend.py  market_geometry.py  memory.py  provider_resilience.py  sampling_tuner.py  smc_adapter.py  structured_output.py
fenrir/core/: __init__.py  budget.py  circuit_breaker.py  client.py  dump_recovery.py  jupiter.py  positions.py  wallet.py
fenrir/data/: __init__.py  analytics.py  audit.py  (+4 more)
scripts/: tunnel.py
tests/: __init__.py  conftest.py  test_agent_panel.py  test_ai_engine.py  test_api.py  test_circuit_breaker.py  test_client.py  test_config_surface.py  test_core.py  test_devnet_integration.py  test_discovery.py  test_discovery_evm.py  test_discovery_scanner.py  test_ensemble_scorer.py  test_filters.py  test_hedge_detector.py  test_jupiter_feeds.py  test_logger.py  test_memory_projection.py  test_migration_feed.py  test_pipeline_5a.py  test_pipeline_5b.py  test_price_feed.py  test_provider_resilience.py  test_pumpfun_instructions.py  test_sampling_tuner.py  test_sanitizer.py  test_scanner.py  test_signal_strategies.py  test_smart_money.py  test_token_filters.py  test_trading_engine.py  test_tx_config.py  test_v2_systems.py
tools/: __init__.py  backtest.py
(+61 files in other folders)
